# HiFiRe3

./: .gitignore  LICENSE  README.md  _config.yml  install.sh  overview.md  rust.txt  singularity.def
shared/crates/hf3_tools/: Cargo.toml  out.sam
shared/crates/hf3_tools/.cargo/: config.toml
shared/crates/hf3_tools/genomex/: Cargo.toml
shared/crates/hf3_tools/genomex/src/: lib.rs
shared/crates/hf3_tools/genomex/src/sam/: mod.rs
shared/crates/hf3_tools/mdi/: Cargo.toml
shared/crates/hf3_tools/mdi/examples/: group_by_in_place_parallel.rs  group_by_in_place_serial.rs  group_by_replace_parallel.rs  group_by_replace_serial.rs  stream_in_place_parallel.rs  stream_in_place_serial.rs  stream_replace_parallel.rs  stream_replace_serial.rs
shared/crates/hf3_tools/mdi/src/: lib.rs  record_streamer.rs
shared/crates/hf3_tools/mdi/src/workflow/: mod.rs
shared/crates/hf3_tools/src/: main.rs
shared/crates/hf3_tools/src/formats/: dorado_bam_quantized_trimmed.txt  dorado_bam_unquantized_trimmed.txt  hf3_tags.rs  hf_tags.rs  mod.rs
shared/crates/hf3_tools/src/inserts/: mod.rs
shared/crates/hf3_tools/src/junctions/: alignment.rs  deduplication.rs  flag.rs  grouping.rs  junction.rs  mod.rs  read_path.rs  samples.rs
shared/crates/hf3_tools/src/sites/: mod.rs
shared/crates/hf3_tools/src/snvs/: mod.rs  pileup.rs  tags.rs  variant.rs
shared/crates/hf3_tools/src/tools/: analyze_alignments.rs  analyze_inserts.rs  analyze_snvs.rs  analyze_svs.rs  apply_filters.rs  basecall_pacbio.rs  create_index.rs  index_fragments_by_chrom.rs  merge_svs.rs  mod.rs  post_process_ultima.rs  reformat_ont.rs  split_bam_by_chrom.rs  split_bam_by_chrom_snv.rs  split_bam_by_chrom_sv.rs  split_by_chrom.rs  trim_ont.rs
shared/crates/hf3_tools/src/tools/analyze_alignments/: alignment_quality_filters.rs  chimeric_read_splitter.rs  endpoint_extraction.rs  traversal_delta.rs
shared/crates/hf3_tools/src/tools/analyze_inserts/: insert_sizes.rs  outer_nodes.rs  site_matching.rs
shared/crates/hf3_tools/src/tools/analyze_snvs/: chrom_worker.rs
shared/crates/hf3_tools/src/tools/analyze_svs/: chrom_worker.rs
shared/crates/hf3_tools/src/tools/basecall_pacbio/: bam.rs  channel_kinetics.rs  commands.txt  (+10 more)
(+254 files in other folders)
