[package]
name = "hf3_tools"
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
authors = ["Thomas E. Wilson"]

[dependencies]
rustc-hash = "2.1"
crossbeam = "0.8.4"
rayon = "1.11"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.1"
rust-htslib = "0.51"
minimap2 = "0.1.28"
faimm = "0.5"

mdi = { path = "../../../../../../frameworks/definitive/mdi-pipelines-framework/crates/mdi" }
# mdi = { path = "../../../../../../frameworks/developer-forks/mdi-pipelines-framework/crates/mdi" }

genomex = { path = "../../../../genomex-mdi-tools/shared/crates/genomex" }
